--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
     <img src="./img/cờgp.png" alt="" />
     <p>sau 1 cap</p>
     <h2>sua lan 1</h2>
+    <h1> sua lan 2</h1>
   </body>
 </html>
